--- a/inventory/static/css/styles.css
+++ b/inventory/static/css/styles.css
@@ -19,6 +19,7 @@ button {
 	height: 32px;
 	font-family: 'Oswald', sans-serif;
 }
+
 p {
 	margin: 20px 0;
 }
@@ -85,7 +86,7 @@ nav li {
 }
 
 #heading {
-/*	background: transparent url(../images/h1-bg.png); */
+/*	background: transparent url(/img/h1-bg.png); */
 	margin: 20px 0;
 }
 h1 {
@@ -107,14 +108,25 @@ section {
 	margin-left: 280px;
 	padding-bottom: 50px;
 }
+
+section h4{
+	font-size: 15px:
+}
+
 section h4 a{
 	text-decoration: none;
 	font-size: 15px;
 }
+
+section h4 a:hover{
+	text-decoration: underline;
+	font-size: 15px;
+}
+
 .aside-menu li {
 	font-weight: 300;
 	list-style-type: square;
-	border-top: 1px solid #e7e7e7;
+  border-top: 1px solid #e7e7e7;
 }
 
 .aside-menu li:first-child {
