--- a/inventory/templates/inventory/base_inet.html
+++ b/inventory/templates/inventory/base_inet.html
@@ -28,7 +28,7 @@
     	       </ul>
         </nav>
 		  <div id="heading">
-        <h1>Точки присутствия</h1>
+        <h1>Интернет</h1>
         <form name="search" action="#" method="post">
         <input type="text" name="q" placeholder="Найти"><button type="submit">ПОИСК</button>
       </div>
