Added Device module and relationships with Pop and Core for Devices

--- a/inventory/templates/inventory/base_inventory.html
+++ b/inventory/templates/inventory/base_inventory.html
@@ -28,18 +28,15 @@
     	       </ul>
         </nav>
 		  <div id="heading">
-        <h1>Интернет</h1>
+        <h1>УЧЕТ ОбОРУДОВАНИЯ</h1>
         <form name="search" action="#" method="post">
         <input type="text" name="q" placeholder="Найти"><button type="submit">ПОИСК</button>
       </div>
 		  <aside>
         <nav>
         	<ul class="aside-menu">
-        		<a href="/internet/cores/"><li>Опорные узлы</li></a>
-        <!--<a href="/internet/vpls/"><li>VPLS-ы</li></a>-->
-        		<a href="/internet/pops/"><li>Точки присутствия</li></a>
-        		<a href="/internet/customers/"><li>Клиенты</li></a>
-            <a href="/internet/blocked/"><li>Блокировки</li></a>
+        		<a href="/inventory/pd/"><li>Оборудование ПД</li></a>
+        		<a href="/inventory/telephony/"><li>Оборудование телефония</li></a>
         	</ul>
         </nav>
       </aside>
