--- a/inventory/templates/inventory/pop_upstreams.html
+++ b/inventory/templates/inventory/pop_upstreams.html
@@ -34,13 +34,13 @@
 <table width='100%'>
   <tr style="height: 30px;">
     <td ><h4><p>Существующие:</h4></td>
-    <td ><h4><p>{{ customer.title }}</h4></td>
+    <td ><h4><p>{{ pop.title }}</h4></td>
   </tr>
-  {% for i in downstream %}
+  {% for i in upstream %}
   <tr style="height: 30px;">
-    <td width='15%'><b>Клиент:</b></td>
-    <td><a href="{% url 'pop_detail' pk=i.pk %}">{{ i }}</a></td>
-    <td><a href="{% url 'pop_downstreams_remove' poppk=pop.pk customerpk=i.pk %}">УДАЛИТЬ</a></td>
+    <td width='15%'><b>Подключение:</b></td>
+    <td><a href="{% url 'core_detail' pk=i.pk %}">{{ i }}</a></td>
+    <td><a href="{% url 'pop_upstreams_remove' poppk=pop.pk corepk=i.pk %}">УДАЛИТЬ</a></td>
   </tr>
   {% endfor %}
 </table>
@@ -48,11 +48,11 @@
   <tr style="height: 30px;">
     <td ><h4><p>Добавить:</h4></td>
   </tr>
-  {% for x in customers %}
+  {% for x in cores %}
   <tr style="height: 30px;">
-    <td width='15%'><b>Клиент:</b></td>
-    <td><a href="{% url 'pop_detail' pk=x.pk %}">{{ x }}</a></td>
-    <td><a href="{% url 'pop_downstreams_add' poppk=pop.pk customerpk=x.pk %}">ДОБАВИТЬ</a></td>
+    <td width='15%'><b>Подключение:</b></td>
+    <td><a href="{% url 'core_detail' pk=x.pk %}">{{ x }}</a></td>
+    <td><a href="{% url 'pop_upstreams_add' poppk=pop.pk corepk=x.pk %}">ДОБАВИТЬ</a></td>
   </tr>
   {% endfor %}
 </table>
