Added filters to all

--- a/inventory/templates/inventory/base_inventory.html
+++ b/inventory/templates/inventory/base_inventory.html
@@ -20,10 +20,10 @@
           </header>
         <nav>
     	       <ul class="top-menu">
-    		         <a href="/internet/"><li>ИНТЕРНЕТ</li></a>
+    		         <a href="/internet/cores/"><li>ИНТЕРНЕТ</li></a>
     		         <a href="/telephony"><li>ТЕЛЕФОНИЯ</li></a>
     		         <a href="/l2vpn/"><li>КАНАЛЫ СВЯЗИ</li></a>
-                 <a href="/inventory/"><li>УЧЕТ ОбОРУДОВАНИЯ</li></a>
+                 <a href="/inventory/pd/"><li>УЧЕТ ОбОРУДОВАНИЯ</li></a>
                  <a href="/ipam/"><li>УЧЕТ РЕСУРСОВ IPv4/IPv6</li></a>
     	       </ul>
         </nav>
