--- a/inventory/templates/inventory/pop_downstreams.html
+++ b/inventory/templates/inventory/pop_downstreams.html
@@ -18,6 +18,7 @@
     background-color: #FF9900;
     border: none;
     height: 32px;
+    width: 72px;
     font-family: 'Oswald', sans-serif;
     float: right;
   }
@@ -26,6 +27,16 @@
     background-color: #FF0000;
     border: none;
     height: 32px;
+    width: 72px;
+    font-family: 'Oswald', sans-serif;
+    float: right;
+  }
+  .filterbutton {
+    color: #fff;
+    background-color: #999999;
+    border: none;
+    height: 32px;
+    width: 72px;
     font-family: 'Oswald', sans-serif;
     float: right;
   }
@@ -40,19 +51,24 @@
   <tr style="height: 30px;">
     <td width='15%'><b>Клиент:</b></td>
     <td><a href="{% url 'pop_detail' pk=i.pk %}">{{ i }}</a></td>
-    <td><a href="{% url 'pop_downstreams_remove' poppk=pop.pk customerpk=i.pk %}">УДАЛИТЬ</a></td>
+    <td><input class="delbutton" type="button" value="УДАЛИТЬ" onclick="location.href='{% url 'pop_downstreams_remove' poppk=pop.pk customerpk=i.pk %}'"></td>
   </tr>
   {% endfor %}
-</table>
-<table width='100%'>
   <tr style="height: 30px;">
     <td ><h4><p>Добавить:</h4></td>
+    <td>
+      <form method="POST">{% csrf_token %}
+      {{ filter.form.as_p }}
+    </td>
+    <td>
+      <button class="filterbutton" type="submit">ФИЛЬТР</button>
+    </td>
   </tr>
-  {% for x in customers %}
+  {% for customer in filter.qs %}
   <tr style="height: 30px;">
     <td width='15%'><b>Клиент:</b></td>
-    <td><a href="{% url 'pop_detail' pk=x.pk %}">{{ x }}</a></td>
-    <td><a href="{% url 'pop_downstreams_add' poppk=pop.pk customerpk=x.pk %}">ДОБАВИТЬ</a></td>
+    <td><a href="{% url 'pop_detail' pk=customer.pk %}">{{ customer.title }}</a></td>
+    <td><input class="addbutton" type="button" value="ДОБАВИТЬ" onclick="location.href='{% url 'pop_downstreams_add' poppk=pop.pk customerpk=customer.pk %}'"></td>
   </tr>
   {% endfor %}
 </table>
