Added IPAM (not all)

--- a/inventory/templates/inventory/base_inet.html
+++ b/inventory/templates/inventory/base_inet.html
@@ -24,7 +24,7 @@
     		         <a href="/telephony/"><li>ТЕЛЕФОНИЯ</li></a>
     		         <a href="/l2vpn/"><li>КАНАЛЫ СВЯЗИ</li></a>
                  <a href="/inventory/pd/"><li>УЧЕТ ОбОРУДОВАНИЯ</li></a>
-                 <a href="/ipam/"><li>УЧЕТ РЕСУРСОВ IPv4/IPv6</li></a>
+                 <a href="/ipam/ipv4/"><li>УЧЕТ РЕСУРСОВ IPv4/IPv6</li></a>
     	       </ul>
         </nav>
 		  <div id="heading">
