--- a/inventory/templates/inventory/base_ipam.html
+++ b/inventory/templates/inventory/base_ipam.html
@@ -24,17 +24,17 @@
     		         <a href="/telephony"><li>ТЕЛЕФОНИЯ</li></a>
     		         <a href="/l2vpn/"><li>КАНАЛЫ СВЯЗИ</li></a>
                  <a href="/inventory/pd/"><li>УЧЕТ ОбОРУДОВАНИЯ</li></a>
-                 <a href="/ipam/ipv4"><li>УЧЕТ РЕСУРСОВ IPv4/IPv6</li></a>
+                 <a href="/ipam/ipv4/"><li>УЧЕТ РЕСУРСОВ IPv4/IPv6</li></a>
     	       </ul>
         </nav>
 		  <div id="heading">
-        <h1>УЧЕТ ОбОРУДОВАНИЯ</h1>
+        <h1>УЧЕТ РЕСУРСОВ IPv4/IPv6</h1>
       </div>
 		  <aside>
         <nav>
         	<ul class="aside-menu">
-        		<a href="/inventory/pd/"><li>Оборудование ПД</li></a>
-        		<a href="/inventory/telephony/"><li>Оборудование телефония</li></a>
+        		<a href="/ipam/ipv4/"><li>Ресуры IPv4</li></a>
+        		<a href="/ipam/ipv6/"><li>Ресуры IPv6</li></a>
         	</ul>
         </nav>
       </aside>
