--- a/inventory/templates/inventory/ipv4_list.html
+++ b/inventory/templates/inventory/ipv4_list.html
@@ -1,4 +1,4 @@
-{% extends 'inventory/base_inet.html' %}
+{% extends 'inventory/base_ipam.html' %}
 {% block content %}
 <style type="text/css">
   h4 a:visited {
@@ -34,27 +34,44 @@
     font-family: 'Oswald', sans-serif;
     float: right;
   }
-
 </style>
+
+<script>
+function Go(val) {
+   var frm=document.seporform;
+   frm.code.value = val;
+   frm.submit();
+}
+</script>
+
 {% if user.is_authenticated %}
-<input class="addbutton" type="button" value="ДОБАВИТЬ" onclick="location.href='{% url 'customer_new' %}'">
+<input class="addbutton" type="button" value="ДОБАВИТЬ" onclick="location.href='{% url 'ipv4_new' %}'">
 {% endif %}
 <table width='100%'>
 <tr style="height: 30px;">
+<!--
   <td>
     <form method="POST">{% csrf_token %}
     {{ filter.form.as_p }}
   </td>
-  <td></td>
   <td>
     <button class="filterbutton" type="submit">ФИЛЬТР</button>
   </td>
+-->
 </tr>
 
-{% for customer in filter.qs %}
+{% for network in ipv4networks %}
 <tr style="height: 30px;">
-  <td width="300px"><h4><a href="{% url 'customer_detail' pk=customer.pk %}">{{ customer.title }}</a></h1></td>
-  <td>{{ customer.address|linebreaksbr }}</td>
+  <td width="100px"><a href="{% url 'ipv4_detail' pk=network.pk %}">{{ network.network }}</a></td>
+  <td>{{ network.comment|linebreaksbr }}</td>
+  <td>
+    <input class="filterbutton" type="button" value="РАЗДЕЛИТЬ" onclick="location.href='{% url 'ipv4_sepor' pk=network.pk %}'">
+    <!--
+    <form name="seporform" method="POST" action="{% url 'ipv4_sepor' pk=network.pk %}">{% csrf_token %}
+    <input  name='code'>
+    </form>
+    <a href="#" onclick="Go(100)" >РАЗДЕЛИТЬ</а>
+    -->
 </tr>
 {% endfor %}
 </table>
