--- a/inventory/templates/inventory/core_detail.html
+++ b/inventory/templates/inventory/core_detail.html
@@ -61,6 +61,8 @@ function delconfirm() {
 
 {% if user.is_authenticated %}
 <input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'core_devices' pk=core.pk %}'">
+{% else %}
+<p>
 {% endif %}
 <table width='100%'>
   <tr style="height: 20px;">
@@ -81,7 +83,30 @@ function delconfirm() {
 </table>
 
 {% if user.is_authenticated %}
+<input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'core_ipv4networks' pk=core.pk %}'">
+{% else %}
+<p>
+{% endif %}
+<table width='100%'>
+  <tr style="height: 20px;">
+    <td width="15%"><h4>Сети IPv4:</h4></td>
+  </tr>
+  <tr style="height: 30px;">
+    <td><b>Сеть:</b></td>
+    <td><b>Описание:</b></td>
+  </tr>
+  {% for n in network %}
+  <tr style="height: 30px;">
+    <td><a href="{% url 'ipv4_detail' pk=n.pk %}">{{ n }}</a</td>
+    <td>{{ n.comment }}</td>
+  </tr>
+  {% endfor %}
+</table>
+
+{% if user.is_authenticated %}
 <input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'core_downstreams' pk=core.pk %}'">
+{% else %}
+<p>
 {% endif %}
 <table width='100%'>
   <tr style="height: 30px;">
