--- a/inventory/templates/inventory/pop_detail.html
+++ b/inventory/templates/inventory/pop_detail.html
@@ -93,6 +93,27 @@ function delconfirm() {
 </table>
 
 {% if user.is_authenticated %}
+<input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'pop_ipv4networks' pk=pop.pk %}'">
+{% else %}
+<p>
+{% endif %}
+<table width='100%'>
+  <tr style="height: 20px;">
+    <td width="15%"><h4>Сети IPv4:</h4></td>
+  </tr>
+  <tr style="height: 30px;">
+    <td><b>Сеть:</b></td>
+    <td><b>Описание:</b></td>
+  </tr>
+  {% for n in network %}
+  <tr style="height: 30px;">
+    <td><a href="{% url 'ipv4_detail' pk=n.pk %}">{{ n }}</a</td>
+    <td>{{ n.comment }}</td>
+  </tr>
+  {% endfor %}
+</table>
+
+{% if user.is_authenticated %}
 <input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'pop_upstreams' pk=pop.pk %}'">
 {% endif %}
 <table width='100%'>
